<resources>
    <string name="app_name">My Quotes</string>
    <string name="quote_init">First think then be</string>
    <string name="favorites">My Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Welcome Quote -->
    <string name="quote_welcome">Welcome to My Quotes!\n\nJust swipe right to begin.\n\nEnjoy!</string>
    <string name="app_author">Augusto Latgé\n&amp; Dennis Orozco\n&amp; Jonathan Larose</string>

    <!-- About Text -->
    <string name="app_about">
        <!-- \"L\'application My Quotes a été développée par les étudiants Jonathan Larose, Augusto
        Dos Santos et Dennis Orozco dans le cadre du cours ift2905 - Interfaces personne-machine de la
        session d\'hiver 2018 sous l\'enseignement du professeur Bernhard Thomaszewski à
        l\'Université de Montréal\.\" -->
        \"The My Quotes app was developed by students Augusto Latgé, Dennis Orozco and Jonathan Larose,
        for the Human-Machine Interfaces course ( IFT 2905) during 2018 Winter term at Montreal University,
        under the teaching of Professor Bernhard Thomaszewski\.\"
    </string>

    <!-- Settings Text -->
    <string name="qod">Quote of the Day</string>
        <string name="qod_activate">Activate Quote of the Day</string>
        <string name="qod_sound">Sound notification</string>
        <string name="qod_time">Set notification time</string>
    <string name="categories">Categories</string>
        <string name="categories_list">Categories List</string>
    <string name="pref">Preferences</string>
        <string name="theme">Color theme</string>

    <!-- Content Description -->
    <string name="img_category">category</string>
    <string name="btn_delete">button delete</string>

    <!-- Naviguation Menu -->
    <string name="Home_id">Home</string>
    <string name="Favorites_id">Favorites</string>
    <string name="Settings_id">Settings</string>
    <string name="About_id">About</string>
    <string name="Share_id">Share</string>
    <string name="Communicate_id">Communicate</string>

    <!-- keys -->
    <string name="bundle_set">bundle_key_setting</string>

    <!-- Debugging -->
    <string name="debugging">MY_QUOTES_DEBUG</string>

    <!-- Sharing -->
    <string name="share_desc">My Quotes, quote by</string>
    <string name="share_app">Hey! I\'m using the app My Quotes. Go check it out!</string>

    <!-- Button -->
    <string name="btn_delete_all">delete all</string>
    <string name="btn_share">share</string>
    <string name="btn_search">search</string>

    <!-- Alert messages -->
    <string name="delete_one">Deleting quote from Favorites</string>
    <string name="delete_one_question">\nAre you sure you want to delete it?</string>
    <string name="delete_all">Deleting all your favorite quotes</string>
    <string name="delete_all_question">\nAre you sure you want to delete them all?</string>
    <string name="delete_all_empty">Nothing to delete!</string>
    <string name="delete_all_empty_question">\nNo favorite quotes to delete...</string>
    <string name="ok_btn">Ok</string>
    <string name="cancel_btn">Cancel</string>
    <string name="back_btn">Back</string>

    <!-- Notification -->
    <string name="notif_ticker">My Quotes - Quote of the Day</string>
    <string name="notif_body">Quote of the Day</string>
    <string name="notif_message">Go check the new quote of the day!</string>

</resources>
