<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="?attr/homeAsUpIndicator"
            android:title="@string/Home_id" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/Favorites_id"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/Settings_id" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/About_id" />
    </group>

    <item android:title="@string/Communicate_id">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share_id" />
        </menu>
    </item>
</menu>
