<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/li_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        app:cardBackgroundColor="?colorAccent"
        app:cardCornerRadius="10dp"
        app:contentPadding="8dp">

        <android.support.constraint.ConstraintLayout
            android:descendantFocusability="blocksDescendants"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCategory"
                android:layout_width="30dp"
                android:layout_height="0dp"
                android:contentDescription="@string/img_category"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_management" />

            <TextView
                android:id="@+id/quote"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:background="@drawable/round_corner"
                android:padding="8dp"
                android:text="@string/quote_welcome"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/author"
                app:layout_constraintEnd_toStartOf="@+id/delete_button"
                app:layout_constraintHorizontal_bias="0.666"
                app:layout_constraintStart_toEndOf="@+id/imgCategory"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/author"
                android:layout_width="0dp"
                android:layout_height="@dimen/li_author_height"
                android:background="@drawable/round_corner"
                android:padding="4dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/app_author"
                android:textAlignment="textEnd"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/quote"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/quote" />

            <ImageButton
                android:id="@+id/delete_button"
                android:layout_width="40dp"
                android:layout_height="0dp"
                android:adjustViewBounds="false"
                android:backgroundTint="@android:color/holo_red_light"
                android:contentDescription="@string/btn_delete"
                android:cropToPadding="false"
                android:elevation="4dp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@android:drawable/ic_menu_delete" />
        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>