<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?colorPrimary"
    tools:context=".QuoteFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="?colorPrimaryLight"
        app:cardCornerRadius="10dp"
        app:cardElevation="8dp"
        app:contentPadding="20dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="247dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgCategory"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_weight="0"
                    android:contentDescription="@string/img_category"
                    android:src="@drawable/icon_management" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <CheckBox
                    android:id="@+id/chk_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:button="@drawable/favorite_checkbock"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <android.support.v4.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="379dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:fillViewport="true"
                app:layout_constraintBottom_toTopOf="@+id/btn_share"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/quote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/text_zone_round_corner"
                        android:lineSpacingExtra="5sp"
                        android:padding="16dp"
                        android:text="@string/quote_welcome"
                        android:textAlignment="textStart"
                        android:textAllCaps="false"
                        android:textSize="17sp"
                        android:textStyle="italic"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/text_zone_round_corner"
                        android:orientation="horizontal">

                        <ImageButton
                            android:id="@+id/btn_search"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:background="@android:color/transparent"
                            android:src="@android:drawable/ic_menu_search" />

                        <TextView
                            android:id="@+id/author"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:paddingBottom="8dp"
                            android:paddingLeft="16sp"
                            android:paddingRight="16sp"
                            android:paddingTop="8dp"
                            android:text="@string/app_author"
                            android:textAlignment="textEnd"
                            android:textSize="14sp" />
                    </LinearLayout>

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="228dp"
                android:layout_marginStart="4dp"
                android:background="@drawable/button_image_share"
                android:contentDescription="@string/Share_id"
                android:src="@android:drawable/ic_menu_share"
                android:tintMode="multiply"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>